--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,40 @@
-body{
-    font-family: Arial;
-    fallback: Verdana;
+body {
+    font-family: Arial, Verdana;
     background: #000000;
-    color:#FFFFFF;
-    margin-top: 20%;
-    margin-left: 20%;
-    margin-right: 20%;
+    color: #FFFFFF;
+    margin: 20px 20px 0px 20px;
 }
 
-h1{
+h1 {
     text-align: center;
     font-size: 42px;
     padding: 15px;
 }
 
-h2{
+h2 {
     color: #0D0D0D;
     font-size: 30px;
 
 }
 
-p{
+p {
     font-size: 24px;
     padding-top: 10px;
     padding-left: 10px;
 }
-img{
-   width: 250px;
-   place-items: center;
-   border: 10px dashed #FFFFFF;
+
+img {
+    width: 250px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: 10px dashed #FFFFFF;
 }
-div{
-    height: 125px;
+
+div {
+    min-height: 125px;
     padding: 20px;
-    border: 3px solid  #FFFFFF;
+    border: 3px solid #FFFFFF;
 }
 
 .introduction {
@@ -42,55 +43,52 @@ div{
     line-height: 2;
 }
 
-.red{
+.red {
     background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-left: 5px;
+    border-width: 0px 0px 2px 5px;
 }
 
-.blue{
+.blue {
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
-    border-top: 2px;
-    border-right: 5px;
+    border-width: 2px 5px 0px 0px;
     color: #C4C4C4;
 
 }
 
-.blue h2{
+.blue h2 {
     color: #C4C4C4;
 }
 
-.yellow{
+.yellow {
     background-color: #ffff00;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-left: 5px;
+    border-width: 0px 0px 2px 5px;
     color: #707070;
 }
 
-.green{
+.green {
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-top: 2px;
-    border-right: 5px;
+    border-width: 2px 5px 0px 0px;
 }
 
-.footer{
-    background: linear-gradient(#000000,  #0000ff 25%,  #0066ff 70%, #000000);
+footer {
+    background: #000000;
+    background: linear-gradient(270deg, #000000 0%, #0000ff 25%, #0066ff 70%, #000000 100%);
     border: 5px solid #ffffff;
 }
 
-.footer p {
+footer p {
     font-size: 20px;
-text-align: right;
-padding-top: 15px;
-padding-right: 15px;
-padding-bottom: 15px;
+    text-align: right;
+    padding-top: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    padding-left: 0px;
 }
-
